Thu Feb 23 10:55:00 UTC 2006  Simon Massey  <sma@prismtech.com>

        * tests/Portable_Interceptors/AdvSlotDblCpy/README:

        Updated README to show example test run.

Wed Feb 22 23:42:40 UTC 2006  J.T. Conklin  <jtc@acorntoolworks.com>

        * tao/Makefile.am:

          Regenerate for new files.

Wed Feb 22 20:54:02 UTC 2006  J.T. Conklin  <jtc@acorntoolworks.com>

        * orbsvcs/orbsvcs/Log/LogNotification.cpp:

          _duplicate() log reference before assigning it to event's logref
          field to get life cycle/reference count management right.  Fixes
          bugzilla issue #2416.

Wed Feb 22 20:37:00 UTC 2006 Frank Rehberger <frehberger@prismtech.com>
        * tao/PluggableMessaging.h: Remove abstract operation:
        read_message, missing_data, get_message_data. Add abstract
        operation parse_next_message (), consolidate_fragmented_message,
        discard_fragmented_message.

        * tao/GIOPMessageBase.{h,cpp}: Remove implementation for
        read_message. Add parse_incoming_messages. Add implementation for
        new abstract methods consolidate_fragmented_message,
        parse_next_message, discard_fragmented_message. Declare as private
        parse_incoming_messages, parse_request_id.  Add new member
        attribute fragment_stack_ of type Incoming_Message_Stack. Handle
        TAO_GIOP_MESSAGE_ERROR not as error. For incomplete messages of
        unknown size, allocating message_blocks of size
        ACE_CDR::DEFAULT_BUFSIZE. Handle memory allocation failures in
        code. Wrap output-strings with ACE_TEXT macro.

        * tao/GIOP_Message_Lite.{h,cpp}: Remove implementation of
        read_message and get_message_data. Handle
        GIOP_MESSAGE_CANCELREQUEST. IMplement new virtual method
        parse_next_message, Handle out-of-memory cases. Dummy
        implementations for consolidate_fragmented_message and
        discard_fragmented_message.
